[gd_scene load_steps=9 format=3 uid="uid://lhvfbwbbghvk"]

[ext_resource type="Script" path="res://interface/menu.gd" id="1_3osww"]
[ext_resource type="FontFile" uid="uid://dqmqqdlp0y4q5" path="res://fonts/RobotoMono-Bold.ttf" id="2_cybwm"]

[sub_resource type="LabelSettings" id="LabelSettings_50to8"]
font = ExtResource("2_cybwm")
font_size = 64

[sub_resource type="Animation" id="Animation_p6low"]
resource_name = "end"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_3cw2k"]
resource_name = "end-pause"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.784314), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_jppxr"]
resource_name = "start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_vbxjl"]
resource_name = "start-pause"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.784314)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jtgjc"]
_data = {
"end": SubResource("Animation_p6low"),
"end-pause": SubResource("Animation_3cw2k"),
"start": SubResource("Animation_jppxr"),
"start-pause": SubResource("Animation_vbxjl")
}

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3osww")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Content" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="_" type="VBoxContainer" parent="Content"]
layout_mode = 2

[node name="_" type="VBoxContainer" parent="Content/_"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Title" type="Label" parent="Content/_/_"]
layout_mode = 2
text = "Godot Engine"
label_settings = SubResource("LabelSettings_50to8")
vertical_alignment = 1

[node name="Version" type="Label" parent="Content/_/_"]
layout_mode = 2
text = "Version 4.3-dev1"
vertical_alignment = 1

[node name="Navigation" type="HBoxContainer" parent="Content/_"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Start" type="Button" parent="Content/_/Navigation"]
layout_mode = 2
text = "Start"
flat = true

[node name="Resume" type="Button" parent="Content/_/Navigation"]
layout_mode = 2
text = "Resume"
flat = true

[node name="Options" type="Button" parent="Content/_/Navigation"]
layout_mode = 2
text = "Options"
flat = true

[node name="Help" type="Button" parent="Content/_/Navigation"]
layout_mode = 2
text = "Help
"
flat = true

[node name="MainMenu" type="Button" parent="Content/_/Navigation"]
layout_mode = 2
text = "Main Menu"
flat = true

[node name="Quit" type="Button" parent="Content/_/Navigation"]
layout_mode = 2
text = "Quit"
flat = true

[node name="Animator" type="AnimationPlayer" parent="."]
root_node = NodePath("../Background")
libraries = {
"": SubResource("AnimationLibrary_jtgjc")
}

[node name="MainMenuConfirmation" type="ConfirmationDialog" parent="."]
title = "Notice"
initial_position = 4
size = Vector2i(450, 106)
dialog_text = "Do you want to stop playing and return to main menu? All unsaved progress will be lost."
dialog_autowrap = true

[node name="QuitConfirmation" type="ConfirmationDialog" parent="."]
title = "Quit Game"
initial_position = 4
ok_button_text = "Yes"
dialog_text = "Do you want to quit?"
cancel_button_text = "No"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Content/_/Navigation/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Content/_/Navigation/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Content/_/Navigation/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Content/_/Navigation/Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="Content/_/Navigation/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Content/_/Navigation/Quit" to="." method="_on_quit_pressed"]
[connection signal="animation_finished" from="Animator" to="." method="_on_animation_finished"]
[connection signal="animation_started" from="Animator" to="." method="_on_animation_started"]
[connection signal="confirmed" from="MainMenuConfirmation" to="." method="_on_main_menu_confirmed"]
[connection signal="confirmed" from="QuitConfirmation" to="." method="_on_quit_confirmation_confirmed"]
